--- a/side-project/style.css
+++ b/side-project/style.css
@@ -66,3 +66,83 @@ a:hover {
 .logo:hover {
     cursor: default;
 }
+
+/*picanha-menu*/
+
+#picanha-nav {
+    display: none;   
+}
+
+.picanha-menu {
+    position: relative;
+    display: inline-block;
+}
+.picanha-icon {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
+}
+
+.picanha-icon span{
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links {
+    position: absolute;
+    top: 100%;
+    right: 0%;
+    background-color: white;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out;
+}
+.menu-links a {
+    display: block;
+    padding: 10px;
+    text-align: center;
+    font-size: 1.5rem;
+    color: black;
+    text-decoration: none;
+    transition: all 0.3 ease-in-out;
+}
+
+.menu-links li {
+    list-style: none;
+}
+
+.menu-links.open {
+    max-height: 300px;
+}
+
+.picanha-icon.open span:first-child {
+    transform: rotate(45deg) translate(10px, 5px);
+}
+
+.picanha-icon.open span:nth-child(2) {
+    opacity: 0;
+}
+
+.picanha-icon.open span:last-child {
+    transform: rotate(-45deg) translate(10px, -5px);
+}
+
+
+.picanha-icon span:first-child {
+    transform: none;
+}
+
+
+.picanha-icon span:first-child {
+    opacity: 1;
+}
+
+.picanha-icon span:first-child {
+    transform: none;
+}
